# optimal-hashmap

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  release.yml
bench/: bench.cpp  bench_gbench.cpp
cmake/: oohConfig.cmake.in
include/ooh/: flat_map.hpp
scripts/: bench_compare.py
tests/: test_flat_map.cpp
